--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -159,26 +159,17 @@ steps:
   args:
   - '-c'
   - |
-    # Get the VPC network name of the GKE cluster
-    CLUSTER_NETWORK=$(gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --format='value(network)')
-    
-    # Get the subnet name of the GKE cluster
-    CLUSTER_SUBNET=$(gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --format='value(subnetwork)')
-    
-    # Get the VPC network name of the MongoDB VM
-    VM_NETWORK=$(gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format='value(networkInterfaces[0].network.basename())')
-    
     # If the networks are different, set up VPC peering
-    if [ "$CLUSTER_NETWORK" != "$VM_NETWORK" ]; then
-      echo "Setting up VPC peering between $CLUSTER_NETWORK and $VM_NETWORK"
+    if [ "$_CLUSTER_NETWORK" != "$_VM_NETWORK" ]; then
+      echo "Setting up VPC peering between $_CLUSTER_NETWORK and $_VM_NETWORK"
       gcloud compute networks peerings create gke-to-mongodb \
-        --network=$CLUSTER_NETWORK \
-        --peer-network=$VM_NETWORK \
+        --network=$_CLUSTER_NETWORK \
+        --peer-network=$_VM_NETWORK \
         --auto-create-routes
       
       gcloud compute networks peerings create mongodb-to-gke \
-        --network=$VM_NETWORK \
-        --peer-network=$CLUSTER_NETWORK \
+        --network=$_VM_NETWORK \
+        --peer-network=$_CLUSTER_NETWORK \
         --auto-create-routes
     fi
     
@@ -186,7 +177,7 @@ steps:
     gcloud compute firewall-rules create allow-gke-to-mongodb \
       --direction=INGRESS \
       --priority=1000 \
-      --network=$VM_NETWORK \
+      --network=$_VM_NETWORK \
       --action=ALLOW \
       --rules=tcp:27017 \
       --source-ranges=$(gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --format='value(clusterIpv4Cidr)')
@@ -350,6 +341,8 @@ substitutions:
   _NODE_COUNT: "3"
   _MACHINE_TYPE: e2-medium
   _BACKUP_BUCKET: ${PROJECT_ID}-mongodb-backups
+  _CLUSTER_NETWORK: $(gcloud container clusters describe ${_CLUSTER_NAME} --zone=${_ZONE} --format='value(network)')
+  _VM_NETWORK: $(gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format='value(networkInterfaces[0].network.basename())')
 
 options:
   logging: CLOUD_LOGGING_ONLY
