--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,13 @@
 steps:
+# Step 0: Get Service Account
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'get-default-compute-sa'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    gcloud iam service-accounts list --filter="displayName:Compute Engine default service account" --format="value(email)" | sed 's/^/VM_SERVICE_ACCOUNT=/' >> /workspace/build.env
+
 # Step 1: Check, delete if exists, and recreate MongoDB VM
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'manage-mongodb-vm'
@@ -7,6 +16,7 @@ steps:
   - '-c'
   - |
     set -e
+    source /workspace/build.env
     if gcloud compute instances describe mongodb-vm --zone=${_ZONE} &>/dev/null; then
       echo "MongoDB VM exists. Deleting..."
       gcloud compute instances delete mongodb-vm --zone=${_ZONE} --quiet
@@ -23,10 +33,8 @@ steps:
     --image-project ubuntu-os-cloud \
     --machine-type ${_MACHINE_TYPE} \
     --zone ${_ZONE} \
+    --service-account=${VM_SERVICE_ACCOUNT} \
     --scopes=https://www.googleapis.com/auth/devstorage.read_write
-
-    # Capture the service account of the VM and append to env_vars file
-    gcloud compute instances describe mongodb-vm --zone=${_ZONE} --format="value(serviceAccounts[0].email)" | sed 's/^/VM_SERVICE_ACCOUNT=/' >> /workspace/env_vars
     
 # Step 2: Check, archive, and create Backup Bucket
 - name: 'gcr.io/cloud-builders/gsutil'
@@ -36,8 +44,7 @@ steps:
   - '-c'
   - |
     set -e
-    # Load the VM service account
-    source /workspace/env_vars
+    source /workspace/build.env
     
     if gsutil ls -b gs://${_BACKUP_BUCKET} &>/dev/null; then
       echo "Backup bucket exists. Archiving..."
@@ -55,7 +62,7 @@ steps:
     echo "New backup bucket created: gs://${_BACKUP_BUCKET}"
     
     echo "Setting permissions for the VM to access the bucket..."
-    gsutil iam ch serviceAccount:$VM_SERVICE_ACCOUNT:objectAdmin gs://${_BACKUP_BUCKET}
+    gsutil iam ch serviceAccount:${VM_SERVICE_ACCOUNT}:objectAdmin gs://${_BACKUP_BUCKET}
     echo "Bucket permissions set for VM access."
     
     echo "Verifying bucket permissions:"
