--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
   args:
   - '-c'
   - |
-    gcloud iam service-accounts list --filter="displayName:Compute Engine default service account" --format="value(email)" | sed 's/^/VM_SERVICE_ACCOUNT=/' >> /workspace/build.env
+    gcloud iam service-accounts list --filter="displayName:Compute Engine default service account" --format="value(email)" | sed 's/^/DEFAULT_COMPUTE_SA=/' >> /workspace/build.env
 
 # Step 1: Check, delete if exists, and recreate MongoDB VM
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -33,7 +33,7 @@ steps:
     --image-project ubuntu-os-cloud \
     --machine-type ${_MACHINE_TYPE} \
     --zone ${_ZONE} \
-    --service-account=$VM_SERVICE_ACCOUNT \
+    --service-account=$DEFAULT_COMPUTE_SA \
     --scopes=https://www.googleapis.com/auth/devstorage.read_write
     
 # Step 2: Check, archive, and create Backup Bucket
@@ -62,7 +62,7 @@ steps:
     echo "New backup bucket created: gs://${_BACKUP_BUCKET}"
     
     echo "Setting permissions for the VM to access the bucket..."
-    gsutil iam ch serviceAccount:$VM_SERVICE_ACCOUNT:objectAdmin gs://${_BACKUP_BUCKET}
+    gsutil iam ch serviceAccount:$DEFAULT_COMPUTE_SA:objectAdmin gs://${_BACKUP_BUCKET}
     echo "Bucket permissions set for VM access."
     
     echo "Verifying bucket permissions:"
